friend list left menu bug, too much dead space at the top

--- a/middleMenuStyle.css
+++ b/middleMenuStyle.css
@@ -1,23 +1,12 @@
-body {
-    background-color: lightgray;
-}
-
-th, td {
-    padding-right: 15px;
-}
-
-.flex-container {
-    display: flex;
-}
-
-.MiddleMenu 
-{
+.MiddleMenu {
     background-color:white;
     width:50%;
-    margin:auto;
-    padding: 25px;   
+    height: fit-content;
+    margin-left:auto;
+    margin-right:auto;
+    padding: 1%;   
     border-radius: 7px;
-    border: 1px solid black;
+    border: 1px solid whitesmoke;
 }
 
 .MiddleTextBlock 
